--- a/layouts/notifications/style.css
+++ b/layouts/notifications/style.css
@@ -222,8 +222,8 @@ body {
     text-decoration: underline
 }
 
-.tweet-body {
-    line-break: anywhere;
+span.tweet-body-text {
+    word-break: break-word;
 }
 
 .tweet-body,
