--- a/layouts/profile/style.css
+++ b/layouts/profile/style.css
@@ -195,8 +195,8 @@ body {
     text-decoration: underline
 }
 
-.tweet-body {
-    line-break: anywhere;
+span.tweet-body-text {
+    word-break: break-word;
 }
 
 .tweet-body,
